--- a/index.html
+++ b/index.html
@@ -1,1 +1,142 @@
-<!-- Agrega aquí la estructura HTML de tu sitio web -->
+<!DOCTYPE html>
+<html>
+  <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta http-equiv="X-UA-Compatible" content="ie=edge">
+      <link href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,500,700,900" rel="stylesheet">
+    <link rel="stylesheet" href="assets/icons/icomoon/style.css">
+    <link rel="stylesheet" href="css/main.css">
+    <title>Lyft</title>
+
+  </head>
+  <body>
+    <header>
+      <nav class="container-nav">
+        <figure>
+          <img src="assets/images/logo-white.png" alt="logo-lyft">
+        </figure>
+        <div class="menu">
+          <ul class="text-montserrat">
+            <li>Drive</li>
+            <li>Explore</li>
+            <li>Help</li>
+            <li>Log in</li>
+          </ul>
+        </div>
+      </nav>
+      <div class="square-white">
+        <div class="texto-square-white">
+          <h2 class="text-uppercase">
+            <p>turn miles</p>
+            <p>into money</p>
+          </h2>
+          <p class="text-uppercase subtitle">sign up to drive with lyft</p>
+          <form action="index.html" method="post">
+            <input type="tel" placeholder="Phone number">
+          </form>
+          <div class="botones">
+            <button class="become" type="button" name="button-drive">Become a driver</button>
+            <button class="sign" type="button" name="button">Sign up to ride</button>
+          </div>
+          <div class="texto-bajo">
+            <p>Already applied? <a href="#">Check the status of your application here.</a> <br>
+              Earn money for inviting friends to drive. <a href="#">Learn more</a></p>
+          </div>
+        </div>
+      </div>
+    </header>
+    <section id="services">
+      <div class="container-services">
+        <div class="text-services">
+          <h3 class="text-uppercase">a ride in minutes</h3>
+          <p>Request a ride and you’ll be on your way in minutes. Request. Ride. Repeat.</p>
+
+          <h3 class="text-uppercase">serious about safety</h3>
+          <p>From knowing the color of your driver’s car to our 24/7 Trust y Safety Team, we got you.</p>
+
+          <h3 class="text-uppercase">HAPPY DRIVERS. <br> HAPPY RIDERS.</h3>
+          <p>Ride with us and you’ll see why 9 out of 10 rides end with five stars.</p>
+        </div>
+        <figure>
+            <img src="assets/images/phone.png" alt="phone">
+        </figure>
+      </div>
+    </section>
+
+    <!-- PARTE-2 / LUCERO-->
+    <div class="part1">
+        <div class="left-box">
+            <a href="#">watch</a>
+            <h3 class="to-uppercase">amplify your ride</h1>
+            <p>Lyft´s new emblem, Amp, is the secret to smooth pickups. Lightning up dashboards nationwide, the device makes it easy for passengers and drivers to find each other.</p>
+        </div>
+        <div class="right-video">
+            <iframe src="https://www.youtube.com/embed/fLSmUWOYpKw" frameborder="0" allowfullscreen></iframe>
+        </div>
+    </div>
+    <div class="part2">
+        <div class="right-box">
+            <a href="#">watch</a>
+            <h3 class="to-uppercase">june</h1>
+            <p>In an animated short film by Academy Award-winner John Kahrs, a lonely widow in historic South Chicago is empowered to start sharing the ride - and her life, too.</p>
+        </div>
+        <div class="left-video">
+            <iframe src="https://www.youtube.com/embed/V7j8Aqxmbs8" frameborder="0" allowfullscreen></iframe>
+        </div>
+    </div>
+    <div class="part3">
+        <div class="left-box">
+            <a href="#">watch</a>
+            <h3 class="to-uppercase">a good thing going</h1>
+            <p>Launching on TV and online, "Ride on the Bright Side" shows how Lyft continues to prioritize happy drivers short ETAs, and safety.</p>
+        </div>
+        <div class="right-video">
+            <iframe src="https://www.youtube.com/embed/xj2VWLV0xCU" frameborder="0" allowfullscreen></iframe>
+        </div>
+    </div>
+    <footer>
+      <div class="top-footer">
+        <div class="menu-footer">
+          <div class="column column1">
+            <h3 class="to-uppercase">log in</h3>
+            <p><a href="#">Help</a></p>
+            <p><a href="#">Cities</a></p>
+            <p><a href="#">Airports</a></p>
+            <p><a href="#">Fare Estimate</a></p>
+          </div>
+          <div class="column">
+            <h3 class="to-uppercase">partner</h3>
+            <p><a href="#">Partnerships</a></p>
+            <p><a href="#">Enterprises</a></p>
+            <p><a href="#">Ambassadors</a></p>
+            <p><a href="#">Developers</a></p>
+          </div>
+          <div class="column">
+            <h3 class="to-uppercase">learn</h3>
+            <p><a href="#">Safety</a></p>
+            <p><a href="#">Blog</a></p>
+            <p><a href="#">Press</a></p>
+            <p><a href="#">Carrers</a></p>
+          </div>
+        </div>
+        <div class="column">
+          <ul>
+            <li><img src="assets/images/apple-store.svg" alt="AppStore"></li>
+            <li><img src="assets/images/google-play.png" alt="GooglePlay"></li>
+            <li><img src="assets/images/microsoft.png" alt="MicrosoftStore"></li>
+          </ul>
+        </div>
+      </div>
+      <div class="social">
+        <i class="icon-facebook"></i>
+        <i class="icon-instagram"></i>
+        <i class="icon-twitter"></i>
+      </div>
+      <hr>
+      <div class="bottom-footer">
+        <p>© 2017 Lyft, Inc.TermsPrivacy</p>
+      </div>
+    </footer>
+  </body>
+</html>
